Show Too many recordings and increase maximum number of recordings from 100 to 500.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -52727,6 +52727,12 @@
         }
       }
     },
+    "Recording started" : {
+
+    },
+    "Recording stopped" : {
+
+    },
     "Recordings" : {
       "localizations" : {
         "de" : {
@@ -68586,6 +68592,9 @@
           }
         }
       }
+    },
+    "Too many recordings. Deleting oldest recording." : {
+
     },
     "Top left" : {
       "localizations" : {
